[gd_scene load_steps=9 format=2]

[ext_resource path="res://animação.gd" type="Script" id=1]
[ext_resource path="res://animação 1.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Stay Pixel DEMO.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://secretaria 1.png" type="Texture" id=4]
[ext_resource path="res://Imagens/Botao-start-pressionado.png" type="Texture" id=5]
[ext_resource path="res://Imagens/botao_start-1.png (1).png" type="Texture" id=6]
[ext_resource path="res://Imagens/caixa_de_texto.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Animação1" type="Sprite" parent="."]
position = Vector2( 230.5, 338.376 )
scale = Vector2( 0.285802, 0.260347 )
texture = ExtResource( 2 )

[node name="Animação2" type="Sprite" parent="."]
visible = false
position = Vector2( 336, 648 )
scale = Vector2( 0.237912, 0.216722 )
texture = ExtResource( 4 )

[node name="ColorRect" type="Sprite" parent="."]
position = Vector2( 235, 755 )
scale = Vector2( 0.335312, 0.335313 )
texture = ExtResource( 7 )

[node name="texto" type="RichTextLabel" parent="."]
margin_left = 61.0
margin_top = 688.0
margin_right = 400.0
margin_bottom = 746.0
custom_fonts/normal_font = SubResource( 1 )
text = "Em uma tarde tranquila na cidade de Pilar"

[node name="Node2D" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 317.0
margin_top = 730.0
margin_right = 908.0
margin_bottom = 1321.0
rect_scale = Vector2( 0.08, 0.08 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
